syntax = "proto3";

package cato.defines;
option go_package = "github.com/ncuhome/cato/generated";


message CatoOptions {
  string cato_package = 1;
  string repo_package = 2;
  string rdb_repo_package = 3;
  string http_handler_package = 4;
}
